--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rylogix.com" />
 
-    <link
-      rel="icon"
-      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%8C%9F%3C/text%3E%3C/svg%3E"
-    />
+    <link rel="icon" href="/favicon.png" type="image/png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
