Add SEO and social sharing metadata

--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="rylogix - playful, premium links and mini-portfolio hub. Find projects, socials, and more."
+      content="Rylogix &mdash; 17 year old developer and Minecraft content creator. Personal portfolio, projects, and links."
     />
+    <meta name="author" content="Rylogix" />
+    <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#14141b" />
-    <meta property="og:title" content="Rylogix - Portfolio" />
+    <meta property="og:title" content="Rylogix Portfolio" />
     <meta
       property="og:description"
-      content="A playful, premium links hub with projects and socials."
+      content="Developer, Minecraft creator, and personal projects."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://rylogix.com" />
+    <meta property="og:url" content="https://rylogix.com/" />
+    <meta property="og:image" content="https://rylogix.com/og-image.png" />
 
     <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="canonical" href="https://rylogix.com/" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
