Add SEO and social sharing metadata

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Rylogix Portfolio" />
     <meta
       property="og:description"
-      content="Developer, Minecraft creator, and personal projects."
+      content="Rylogix Official Portfolio"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rylogix.com/" />
