Update bio, about me, and GitHub description

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
               <p class="eyebrow">hello, i'm</p>
               <h1>rylogix</h1>
               <p class="tagline">
-                Welcome to my portfolio. There&rsquo;s not much here, so don&rsquo;t
-                get overwhelmed.
+                Welcome to my portfolio!! This entire webpage was indeed coded by
+                me and is not using ANY website builder so you should be impressed
               </p>
               <div class="hero-actions">
                 <button class="btn btn-ghost" id="share-page" type="button">
@@ -97,9 +97,10 @@
           </div>
           <div class="about-card">
             <p>
-              I am a 17 year old BUM with a job and a laptop, trying to learn how to
-              code while also making Minecraft content creation. I do a lot of stuff,
-              and that&rsquo;s about it.
+              I am a 17 year old BUM that is currently learning how to code and
+              trying to go to Savannah State University for computer science,
+              currently in high school with a job so it&rsquo;s not as easy as it
+              should be.
             </p>
           </div>
         </div>
