added project tags

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
               rel="noopener noreferrer"
             >
               <h3>YouTube Optimizer</h3>
+              <p class="eyebrow">Tech Used</p>
+              <div class="hero-actions" aria-label="Tech used">
+                <span class="btn btn-ghost">Python</span>
+                <span class="btn btn-ghost">HTML + CSS</span>
+              </div>
             </a>
           </div>
         </div>
