--- a/index.html
+++ b/index.html
@@ -120,10 +120,12 @@
               rel="noopener noreferrer"
             >
               <h3>YouTube Optimizer</h3>
-              <p class="eyebrow">Tech Used</p>
-              <div class="hero-actions" aria-label="Tech used">
-                <span class="btn btn-ghost">Python</span>
-                <span class="btn btn-ghost">HTML + CSS</span>
+              <div class="project-meta">
+                <p class="project-label">Languages Used</p>
+                <div class="project-tags" aria-label="Languages used">
+                  <span class="project-tag">Python</span>
+                  <span class="project-tag">HTML + CSS</span>
+                </div>
               </div>
             </a>
           </div>
