what im learning added

--- a/index.html
+++ b/index.html
@@ -131,6 +131,33 @@
           </div>
         </div>
       </section>
+
+      <section class="learning" id="learning">
+        <div class="container">
+          <div class="section-title">
+            <h2>What I'm Learning</h2>
+            <span class="underline"></span>
+          </div>
+          <p class="learning-note">
+            <span class="learning-dot" aria-hidden="true"></span>
+            What im currently working on and learning,
+          </p>
+          <div class="learning-grid" role="list">
+            <div class="learning-card" role="listitem">
+              <h3>JavaScript fundamentals</h3>
+            </div>
+            <div class="learning-card" role="listitem">
+              <h3>Git &amp; GitHub workflows</h3>
+            </div>
+            <div class="learning-card" role="listitem">
+              <h3>Web performance and basic SEO</h3>
+            </div>
+            <div class="learning-card" role="listitem">
+              <h3>Python scripting</h3>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="site-footer">
