changed visitors to visits

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               src="https://raw.githubusercontent.com/twbs/icons/main/icons/eye.svg"
               alt="Visitors"
             />
-            <span class="visitor-label">Visitors</span>
+            <span class="visitor-label">Visits</span>
             <span class="visitor-count" id="visitor-count">0</span>
           </div>
         </div>
