--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
         </div>
         <nav class="topbar-nav">
           <a href="#links">Links</a>
-          <a href="#about">About</a>
           <a href="#projects">Projects</a>
+          <a href="#learning">Learning</a>
+          <a href="#tech">Tech</a>
         </nav>
       </div>
     </header>
@@ -66,21 +67,18 @@
         <div class="container hero-inner">
           <div class="hero-card">
             <div class="discord-card" id="discord-card" data-status="offline">
-              <div class="discord-avatar-wrap">
+              <div class="avatar-wrap">
                 <img
                   class="discord-avatar"
                   id="discord-avatar"
                   src="https://cdn.discordapp.com/embed/avatars/0.png"
                   alt="Discord profile avatar"
                 />
-                <span class="discord-status-dot" aria-hidden="true"></span>
+                <span class="status-dot" aria-hidden="true"></span>
               </div>
-              <div class="discord-presence">
-                <p class="discord-status" id="discord-status">
-                  Status: loading...
-                </p>
+              <div class="discord-text">
                 <p class="discord-activity" id="discord-activity">
-                  Not playing anything right now.
+                  Doing nothing.
                 </p>
               </div>
             </div>
@@ -108,23 +106,6 @@
             <span class="underline"></span>
           </div>
           <div id="links-grid" class="links-grid" aria-live="polite"></div>
-        </div>
-      </section>
-
-      <section class="about" id="about">
-        <div class="container">
-          <div class="section-title">
-            <h2>About</h2>
-            <span class="underline"></span>
-          </div>
-          <div class="about-card">
-            <p>
-              I am a 17 year old BUM that is currently learning how to code and
-              trying to go to Savannah State University for computer science,
-              currently in high school with a job so it&rsquo;s not as easy as it
-              should be.
-            </p>
-          </div>
         </div>
       </section>
 
@@ -178,6 +159,53 @@
               <h3>Python scripting</h3>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="tech" id="tech">
+        <div class="container">
+          <div class="section-title">
+            <h2>Tech</h2>
+            <span class="underline"></span>
+          </div>
+          <ul class="tech-list" role="list">
+            <li>
+              <span class="tech-label">PC:</span>
+              Gaming laptop, Ryzen 5 6000 CPU and AMD RADEON GRAPHICS
+            </li>
+            <li>
+              <span class="tech-label">Keyboard:</span>
+              <a
+                href="https://steelseries.com/gaming-keyboards/apex-3"
+                target="_blank"
+                rel="noopener noreferrer"
+              >SteelSeries Apex 3</a>
+            </li>
+            <li>
+              <span class="tech-label">Mouse:</span>
+              <a
+                href="https://www.logitechg.com/en-us/shop/p/g305-lightspeed-wireless-gaming-mouse"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Logitech G305</a>
+            </li>
+            <li>
+              <span class="tech-label">Mic:</span>
+              <a
+                href="https://www.maono.com/products/maono-pd300x-usb-and-xlr-dynamic-microphone"
+                target="_blank"
+                rel="noopener noreferrer"
+              >PD300X</a>
+            </li>
+            <li>
+              <span class="tech-label">Headphones:</span>
+              <a
+                href="https://hyperx.com/products/hyperx-cloud-alpha"
+                target="_blank"
+                rel="noopener noreferrer"
+              >HyperX Cloud Alpha</a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
