--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&family=Inter:wght@400;500;600&display=swap"
     />
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css?v=3" />
     <title>Rylogix Portfolio</title>
   </head>
   <body>
@@ -216,7 +216,7 @@
 
     <div class="toast" id="toast" role="status" aria-live="polite"></div>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=3"></script>
     <script>
       (function() {
         const domain = encodeURIComponent(window.location.hostname);
