--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <a href="#projects">Projects</a>
           <a href="#learning">Learning</a>
           <a href="#tech">Tech</a>
+          <a href="#contact">Contact</a>
         </nav>
       </div>
     </header>
@@ -206,6 +207,36 @@
               >HyperX Cloud Alpha</a>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="contact" id="contact">
+        <div class="container">
+          <div class="section-title">
+            <h2>Contact</h2>
+            <span class="underline"></span>
+          </div>
+          <form
+            class="contact-form"
+            action="https://formspree.io/f/xzdbjwgy"
+            method="POST"
+          >
+            <label class="contact-field">
+              <span>Name</span>
+              <input type="text" name="name" required />
+            </label>
+            <label class="contact-field">
+              <span>Email</span>
+              <input type="email" name="email" required />
+            </label>
+            <label class="contact-field">
+              <span>Message</span>
+              <textarea name="message" rows="5" required></textarea>
+            </label>
+            <button class="btn contact-submit" type="submit">
+              Send Message
+            </button>
+          </form>
         </div>
       </section>
     </main>
