--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
           <a href="#projects">Projects</a>
           <a href="#learning">Learning</a>
           <a href="#tech">Tech</a>
-          <a href="#contact">Contact</a>
         </nav>
       </div>
     </header>
@@ -91,8 +90,8 @@
                 me and is not using ANY website builder so you should be impressed
               </p>
               <div class="hero-actions">
-                <button class="btn btn-ghost" id="share-page" type="button">
-                  Share
+                <button class="btn btn-ghost" id="contact-button" type="button">
+                  Contact
                 </button>
               </div>
             </div>
@@ -210,40 +209,58 @@
         </div>
       </section>
 
-      <section class="contact" id="contact">
-        <div class="container">
-          <div class="section-title">
-            <h2>Contact</h2>
-            <span class="underline"></span>
-          </div>
-          <form
-            class="contact-form"
-            action="https://formspree.io/f/xzdbjwgy"
-            method="POST"
-          >
-            <label class="contact-field">
-              <span>Name</span>
-              <input type="text" name="name" required />
-            </label>
-            <label class="contact-field">
-              <span>Email</span>
-              <input type="email" name="email" required />
-            </label>
-            <label class="contact-field">
-              <span>Message</span>
-              <textarea name="message" rows="5" required></textarea>
-            </label>
-            <button class="btn contact-submit" type="submit">
-              Send Message
-            </button>
-          </form>
-        </div>
-      </section>
     </main>
 
     <footer class="site-footer">
       <div class="container"></div>
     </footer>
+
+    <div class="modal-backdrop" id="contact-backdrop"></div>
+    <div
+      class="contact-modal"
+      id="contact-modal"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="contact-modal-title"
+      aria-hidden="true"
+    >
+      <div class="contact-modal-inner" role="document">
+        <button
+          class="modal-close"
+          id="contact-close"
+          type="button"
+          aria-label="Close contact form"
+        >
+          &times;
+        </button>
+        <h2 id="contact-modal-title">Contact</h2>
+        <!-- Replace YOUR_FORM_ID with your Formspree form ID -->
+        <form
+          class="contact-form"
+          id="contact-form"
+          action="https://formspree.io/f/YOUR_FORM_ID"
+          method="POST"
+        >
+          <label class="contact-field">
+            <span>Name</span>
+            <input type="text" name="name" required />
+          </label>
+          <label class="contact-field">
+            <span>Email</span>
+            <input type="email" name="email" required />
+          </label>
+          <label class="contact-field">
+            <span>Message</span>
+            <textarea name="message" rows="5" required></textarea>
+          </label>
+          <button class="btn contact-submit" type="submit">
+            Send Message
+          </button>
+          <p class="contact-note">Replies will go to my inbox.</p>
+          <p class="contact-status" id="contact-status" role="status" aria-live="polite"></p>
+        </form>
+      </div>
+    </div>
 
     <div class="toast" id="toast" role="status" aria-live="polite"></div>
 
