--- a/index.html
+++ b/index.html
@@ -234,11 +234,10 @@
           &times;
         </button>
         <h2 id="contact-modal-title">Contact</h2>
-        <!-- Replace YOUR_FORM_ID with your Formspree form ID -->
         <form
           class="contact-form"
           id="contact-form"
-          action="https://formspree.io/f/YOUR_FORM_ID"
+          action="https://formspree.io/f/xzdbjwgy"
           method="POST"
         >
           <label class="contact-field">
