--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
               <p class="eyebrow">hello, i'm</p>
               <h1>rylogix</h1>
               <p class="tagline">
-                Welcome to my portfolio!! This entire webpage was indeed coded by
-                me and is not using ANY website builder so you should be impressed
+                Welcome to my portfolio. This site was built from scratch using
+                custom code, without website builders.
               </p>
               <div class="hero-actions">
                 <button class="btn btn-ghost" id="contact-button" type="button">
-                  Contact
+                  Contact me
                 </button>
               </div>
             </div>
