--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
               <p class="eyebrow">hello, i'm</p>
               <h1>rylogix</h1>
               <p class="tagline">
-                Welcome to my portfolio. This site was built from scratch using
-                custom code, without website builders.
+                Welcome to my portfolio, I built this entire website from scratch
+                using my current HTML, CSS and JS skills.
               </p>
               <div class="hero-actions">
                 <button class="btn btn-ghost" id="contact-button" type="button">
