current tuff build

--- a/index.html
+++ b/index.html
@@ -65,23 +65,28 @@
     <main>
       <section class="hero" id="top">
         <div class="container hero-inner">
-          <div class="hero-card" data-reveal>
-            <div class="discord-card" id="discord-card" data-status="offline">
-              <div class="avatar-wrap">
-                <img
-                  class="discord-avatar"
-                  id="discord-avatar"
-                  src="https://cdn.discordapp.com/embed/avatars/0.png"
-                  alt="Discord profile avatar"
-                />
-                <span class="status-dot" aria-hidden="true"></span>
-              </div>
-              <div class="discord-text">
-                <p class="discord-activity" id="discord-activity">
-                  Doing nothing.
-                </p>
-              </div>
+          <div
+            class="discord-card"
+            id="discord-card"
+            data-status="offline"
+            data-reveal
+          >
+            <div class="avatar-wrap">
+              <img
+                class="discord-avatar"
+                id="discord-avatar"
+                src="https://cdn.discordapp.com/embed/avatars/0.png"
+                alt="Discord profile avatar"
+              />
+              <span class="status-dot" aria-hidden="true"></span>
             </div>
+            <div class="discord-text">
+              <p class="discord-activity" id="discord-activity">
+                Doing nothing.
+              </p>
+            </div>
+          </div>
+          <div class="hero-card" data-reveal>
             <div class="hero-text">
               <p class="eyebrow">hello, i'm</p>
               <h1>rylogix</h1>
