--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
               <p class="eyebrow">hello, i'm</p>
               <h1>rylogix</h1>
               <p class="tagline">
-                Welcome to my portfolio, I built this entire website from scratch
-                using my current HTML, CSS and JS skills.
+                Welcome to my portfolio, here I showcase my coding, content creation,
+                and some other stuff. fun fact this website was coded without any
+                external program that builds websites!
               </p>
               <div class="hero-actions">
                 <button class="btn btn-ghost" id="contact-button" type="button">
