--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
               <h1>rylogix</h1>
               <p class="tagline">
                 Welcome to my portfolio, here I showcase my coding, content creation,
-                and some other stuff. fun fact this website was coded without any
-                external program that builds websites!
+                and some other stuff.
+                <br />
+                Fun fact this website was coded without any external program that
+                builds websites!
               </p>
               <div class="hero-actions">
                 <button class="btn btn-ghost" id="contact-button" type="button">
