Update branding, remove sections, improve tech hover

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Rylogix &mdash; 17 year old developer and Minecraft content creator. Personal portfolio, projects, and links."
+      content="Rylogix &mdash; 17 year old developer and Minecraft content creator. Personal page, links, and tech."
     />
     <meta name="author" content="Rylogix" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#14141b" />
-    <meta property="og:title" content="Rylogix Portfolio" />
+    <meta property="og:title" content="Rylogix" />
     <meta
       property="og:description"
-      content="Rylogix Official Portfolio"
+      content="Rylogix Official Site"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rylogix.com/" />
@@ -37,7 +37,7 @@
     />
 
     <link rel="stylesheet" href="css/styles.css?v=3" />
-    <title>Rylogix Portfolio</title>
+    <title>Rylogix</title>
   </head>
   <body>
     <header class="topbar">
@@ -55,8 +55,6 @@
         </div>
         <nav class="topbar-nav">
           <a href="#links">Links</a>
-          <a href="#projects">Projects</a>
-          <a href="#learning">Learning</a>
           <a href="#tech">Tech</a>
         </nav>
       </div>
@@ -96,11 +94,8 @@
               <p class="eyebrow">hello, i'm</p>
               <h1>rylogix</h1>
               <p class="tagline">
-                Welcome to my portfolio, here I showcase my coding, content creation,
-                and some other stuff.
-                <br />
-                Fun fact this website was coded without any external program that
-                builds websites!
+                Welcome to my website!! Fun fact: this website was coded without any
+                external program that builds websites
               </p>
               <div class="hero-actions">
                 <button class="btn btn-ghost" id="contact-button" type="button">
@@ -119,64 +114,6 @@
             <span class="underline"></span>
           </div>
           <div id="links-grid" class="links-grid" aria-live="polite"></div>
-        </div>
-      </section>
-
-      <section class="projects" id="projects">
-        <div class="container">
-          <div class="section-title" data-reveal>
-            <h2>Projects</h2>
-            <span class="underline"></span>
-          </div>
-          <div class="project-grid">
-            <a
-              class="project-card"
-              data-reveal
-              href="https://github.com/Rylogix/Youtube-Optimizer"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <h3>YouTube Optimizer</h3>
-              <div class="project-meta">
-                <p class="project-label">Languages Used</p>
-                <div class="project-tags" aria-label="Languages used">
-                  <span class="project-tag">Python</span>
-                  <span class="project-tag">HTML + CSS</span>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <section class="learning" id="learning">
-        <div class="container">
-          <div class="section-title" data-reveal>
-            <h2>What I'm Learning</h2>
-            <span class="underline"></span>
-          </div>
-          <p class="learning-note" data-reveal>
-            <span class="learning-dot" aria-hidden="true"></span>
-            What im currently working on and learning,
-          </p>
-          <div class="learning-list" role="list">
-            <div class="learning-row" role="listitem" data-reveal>
-              <span class="learning-bullet" aria-hidden="true"></span>
-              <h3>JavaScript fundamentals</h3>
-            </div>
-            <div class="learning-row" role="listitem" data-reveal>
-              <span class="learning-bullet" aria-hidden="true"></span>
-              <h3>Git &amp; GitHub workflows</h3>
-            </div>
-            <div class="learning-row" role="listitem" data-reveal>
-              <span class="learning-bullet" aria-hidden="true"></span>
-              <h3>Web performance and basic SEO</h3>
-            </div>
-            <div class="learning-row" role="listitem" data-reveal>
-              <span class="learning-bullet" aria-hidden="true"></span>
-              <h3>Python scripting</h3>
-            </div>
-          </div>
         </div>
       </section>
 
